# yash

./: Cargo.toml  Justfile  Readme.md  release.sh
src/: builtins.rs  command.rs  config.rs  debug.rs  main.rs  prompt.rs  read_line.rs  signals.rs  strings.rs  term_state.rs  utils.rs  widget.rs
src/debug/: debug.rs  release.rs
src/read_line/: completion.rs  cursor.rs  history.rs  parser.rs  text_field.rs
src/read_line/completion/: files.rs
