[package]
name = "yash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
bstr = "1.6.0"
color-eyre = { version = "0.6.2", default-features=false }
derive_more = "0.99.17"
directories = "5.0.1"
glam = "0.24.1"
nix = { version = "0.26.2", default-features = false, features = ["term", "signal", "ioctl", "user", "hostname"] }
regex = { version = "1.9.3" }
yansi-term = "0.1.2"
shell-word-split = {path="../shell-word-split"}
signal-hook = "0.3.17"
fehler = "1.0.0"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
